# PI-server-rack

./: .gitignore  README.md
arduino/: LiquidCrystal.h  README.md  arduino.ino
arduino/libs/: LiquidCrystal.h
arduino/src/: LcdControl.cpp  LcdControl.h  SerialHandler.cpp  SerialHandler.h
desktop/: Cargo.toml  README.md
desktop/lang/: en_us.json
desktop/src/: langhandler.rs  main.rs
desktop/src/confighandler/: mod.rs
desktop/src/defaultconfigs/: mod.rs
desktop/src/ui/: mod.rs
desktop/src/ui/tabs/: mod.rs
pc/: main.py
pi-master/: Cargo.toml  README.md  main.py
pi-slave/: Cargo.toml  README.md  main.py
pi1/: main.py
pi4/: main.py
