[package]
name = "desktop"
version = "0.1.0"
#authors = ["Jonas_Jones"]
edition = "2021"
#description = "The desktop module of the PI-server-rack project."
#documentation = "https://github.com/JonasJones/PI-server-rack"
#readme = "README.md"
#homepage = "https://jonasjones.me/PI-server-rack"
#repository = "https://github.com/J-onasJones/PI-server-rack"
#license = "MIT OR Apache-2.0"
#keywords = ["server", "raspberry pi"]
#categories = ["config"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.19.0"
try-catch = "0.2.2"
serde = "1.0.144"
serde_json = "1.0.85"
serde_derive = "1.0.144"
config = "0.13.2"
log = "0.4.17"
dirs = "4.0.0"