[package]
name = "pi-slave"
version = "0.1.0"
authors = "Jonas_Jones"
edition = "2021"
description = "The Raspberry Pi slave module of the PI-server-rack project."
documentation = "https://github.com/JonasJones/PI-server-rack"
readme = "README.md"
homepage = "https://jonasjones.me/PI-server-rack"
repository = "https://github.com/J-onasJones/PI-server-rack"
license = "MIT OR Apache-2.0"
keywords = ["server", "raspberry pi"]
categories = ["config"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
